--- a/app/globals.css
+++ b/app/globals.css
@@ -457,7 +457,7 @@
 
   /* Mobile Navigation */
   .mobile-header {
-    @apply flex h-[60px] justify-between px-5 sm:hidden !important;
+    @apply flex h-[60px] justify-between px-5 lg:hidden !important;
   }
 
   .header-user {
