--- a/app/globals.css
+++ b/app/globals.css
@@ -62,7 +62,7 @@
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
-    --sidebar-background: 0 0% 98%;
+    --sidebar-background: 0 0% 100%;
     --sidebar-foreground: 240 5.3% 26.1%;
     --sidebar-primary: 240 5.9% 10%;
     --sidebar-primary-foreground: 0 0% 98%;
@@ -513,6 +513,10 @@
   /* Sidebar */
   .sidebar {
     @apply remove-scrollbar hidden h-screen w-[90px] flex-col overflow-auto px-5 py-7 sm:flex lg:w-[280px] xl:w-[325px] !important;
+  }
+
+  .sidebar-profile-border {
+    @apply border-r-2 border-brand !important;
   }
 
   .sidebar-nav {
